[gd_scene load_steps=7 format=3 uid="uid://ce1kqhfrm1sfi"]

[ext_resource type="Texture2D" uid="uid://dpmc37xwnxcoj" path="res://Items/Bomb.png" id="1_oifj3"]
[ext_resource type="Script" path="res://bomb.gd" id="1_svim5"]
[ext_resource type="PackedScene" uid="uid://cyof4mi4vf3yt" path="res://Particle Effects/explosion.tscn" id="3_8fg0m"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_dwcyj"]
friction = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_gtpk6"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gbl4c"]
radius = 45.0111

[node name="Bomb" type="RigidBody2D"]
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_dwcyj")
script = ExtResource("1_svim5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("1_oifj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gtpk6")

[node name="Explosion_Area" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion_Area"]
shape = SubResource("CircleShape2D_gbl4c")

[node name="Explosion_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Explosion_Life" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Explosion" parent="." instance=ExtResource("3_8fg0m")]

[connection signal="area_entered" from="Explosion_Area" to="." method="_on_explosion_area_area_entered"]
[connection signal="timeout" from="Explosion_Timer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="Explosion_Life" to="." method="_on_explosion_life_timeout"]
